feat: cpId -> Camp 상세 조회 코드 작성