@@ -8,10 +8,10 @@ import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.stereotype.Component;
 
+import java.util.ArrayList;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
-import java.util.stream.Collectors;
 
 @Slf4j
 @Getter
@@ -22,7 +22,6 @@ public class LocationMapRegistry {
     private final LocationCodeRepository locationCodeRepository;
 
     private final Map<Long, LocationCode> loctCdMap = new HashMap<>();
-//    private final Map<String, LocationCode> nameToLoctCdMap = new HashMap<>();
 
     @PostConstruct
     public void init() {
@@ -33,35 +32,21 @@ public class LocationMapRegistry {
         setLocationCodeMaps(loctCdList);
 
         log.info("loctCdMap.size()={}", loctCdMap.size());
-//        log.info("nameToLoctCdMap.size()={}", nameToLoctCdMap.size());
         log.info("LocationMapRegistry.init() 종료");
     }
 
     private void setLocationCodeMaps (List<LocationCode> loctCdList) {
-        loctCdList.forEach(loctCd -> {
-            loctCdMap.put(loctCd.getLoctCdId(), loctCd);
-//            nameToLoctCdMap.put(loctCd.getLoctCdNm(), loctCd);
-        });
+        loctCdList.forEach(loctCd ->
+                loctCdMap.put(loctCd.getLoctCdId(), loctCd));
     }
 
-    public LocationCode findByLoctCdId(Long loctCdId) {
-        return loctCdMap.get(loctCdId);
-    }
+    public List<String> getLocdCdNmList(List<Long> loctCdIdList) {
+        if (loctCdIdList.isEmpty()) {
+            return null;
+        }
 
-    /*
-    public LocationCode findByLoctCdNm(String loctCdNm) {
-        return nameToLoctCdMap.get(loctCdNm);
-    }
-
-    public void addLocationCodeMaps(LocationCode locationCode) {
-        loctCdMap.put(locationCode.getLoctCdId(), locationCode);
-        nameToLoctCdMap.put(locationCode.getLoctCdNm(), locationCode);
-    }
-    */
-
-    public List<String> getLoctCdNmListByIds(List<Long> loctCdIdList) {
         return loctCdIdList.stream()
                 .map(loctCdId -> loctCdMap.get(loctCdId).getLoctCdNm())
-                .collect(Collectors.toList());
+                .toList();
     }
 }
