@@ -8,10 +8,10 @@ import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.stereotype.Component;
 
+import java.util.ArrayList;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
-import java.util.stream.Collectors;
 
 @Slf4j
 @Getter
@@ -22,7 +22,6 @@ public class SeasonMapRegistry {
     private final SeasonCodeRepository seasonCodeRepository;
 
     private final Map<Long, SeasonCode> seasonCdMap = new HashMap<>();
-//    private final Map<String, SeasonCode> nameToSeasonCdMap = new HashMap<>();
 
     @PostConstruct
     public void init() {
@@ -33,35 +32,21 @@ public class SeasonMapRegistry {
         setSeasonCodeMaps(seasonCdList);
 
         log.info("seasonCdMap.size()={}", seasonCdMap.size());
-//        log.info("nameToSeasonCdMap.size()={}", nameToSeasonCdMap.size());
         log.info("SeasonMapRegistry.init() 종료");
     }
 
     private void setSeasonCodeMaps(List<SeasonCode> seasonCdList) {
-        seasonCdList.forEach(seasonCd -> {
-            seasonCdMap.put(seasonCd.getSeasonCdId(), seasonCd);
-//            nameToSeasonCdMap.put(seasonCd.getSeasonCdNm(), seasonCd);
-        });
+        seasonCdList.forEach(seasonCd ->
+                seasonCdMap.put(seasonCd.getSeasonCdId(), seasonCd));
     }
 
-    public SeasonCode findBySeasonCdId(Long seasonCdId) {
-        return seasonCdMap.get(seasonCdId);
-    }
+    public List<String> getSeasonCdNmList(List<Long> seasonCdIdList) {
+        if (seasonCdIdList.isEmpty()) {
+            return null;
+        }
 
-    /*
-    public SeasonCode findBySeasonCdNm(String seasonCdNm) {
-        return nameToSeasonCdMap.get(seasonCdNm);
-    }
-
-    public void addSeasonCodeMaps(SeasonCode seasonCode) {
-        seasonCdMap.put(seasonCode.getSeasonCdId(), seasonCode);
-        nameToSeasonCdMap.put(seasonCode.getSeasonCdNm(), seasonCode);
-    }
-    */
-
-    public List<String> getSeasonCdNmListByIds(List<Long> seasonCdIdList) {
         return seasonCdIdList.stream()
                 .map(seasonCdId -> seasonCdMap.get(seasonCdId).getSeasonCdNm())
-                .collect(Collectors.toList());
+                .toList();
     }
 }
